<resources>
    <string name="app_name">CupCake</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vanilla">Vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="coffee">Coffee</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="one_cupcakes">one cupcake</string>
    <string name="six_cupcakes">six cupcakes</string>
    <string name="twelve_cupcakes">Twelve cupcakes</string>
    <string name="next">Next</string>
    <string name="order_cupcakes">Order Cupcakes</string>
    <string name="quantity">Quantity: </string>
    <string name="flavour">Flavour: </string>
    <string name="pickup_date">Pickup Date:</string>
    <string name="send_btn">Send order to another app</string>
    <string name="subtotal">Subtotal: $%s</string>
    <string name="cancel">Cancel</string>
    <string name="order_details">Quantity: %1$s \n Flavor: %2$s \nPickup date: %3$s \nTotal: %4$s \n\n Thank you!!!</string>
    <string name="new_cupcake_order">New Cupcake Order!!</string>

    <plurals name="cupcakes">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>

</resources>